# Emu-Boy

./: CMakeLists.txt  LICENCE.md  README.md  emu  install.sh  run.sh  uninstall.sh
headers/: bus.hpp  cart.hpp  common.hpp  cpu.hpp  dbg.hpp  dma.hpp  gamepad.hpp  instructions.hpp  interrupts.hpp  io.hpp  lcd.hpp  main.hpp  ppu.hpp  ppu_sm.hpp  ram.hpp  stack.hpp  timer.hpp  ui.hpp
sources/: bus.cpp  cart.cpp  cpu.cpp  cpu_fetch.cpp  cpu_proc.cpp  cpu_util.cpp  dbg.cpp  dma.cpp  gamepad.cpp  instructions.cpp  interrupts.cpp  io.cpp  lcd.cpp  main.cpp  ppu.cpp  ppu_pipeline.cpp  ppu_sm.cpp  ram.cpp  stack.cpp  timer.cpp  ui.cpp
